--- a/notebooks/analysis.ipynb
+++ b/notebooks/analysis.ipynb
@@ -37,21 +37,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "3359a88c",
-   "metadata": {},
-   "source": [
-    "### 📉 Loss Curve Comparisons\n",
-    "![Loss Curves](../tensorboard_screenshots/loss_curves.png)\n",
-    "\n",
-    "### 🕒 Training Speed Differences\n",
-    "![Training Speed](../tensorboard_screenshots/training_speed.png)\n",
-    "\n",
-    "### 🧠 Model Architecture Graphs\n",
-    "![Architecture](../tensorboard_screenshots/model_architectures.png)\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "63662216",
@@ -81,13 +66,13 @@
    "id": "18894463",
    "metadata": {},
    "source": [
-    "### 🔍 Analysis\n",
+    "### Analysis\n",
     "\n",
     "- **Overfitting**: The model trained with 5 layers and 100 neurons fit the training data very well, but had poor validation performance, indicating overfitting.\n",
     "- **Underfitting**: The model with only 1 layer and 4 neurons couldn't capture the complexity of the harmonic function.\n",
     "- **Optimal**: The `optimal.json` config with 3 layers, 64 neurons, and `tanh` activation had the best balance between model capacity and generalization.\n",
     "\n",
-    "### ✅ Recommendations\n",
+    "### Recommendations\n",
     "\n",
     "- Use 2–3 hidden layers with 32–64 neurons for moderate function complexity.\n",
     "- Use `tanh` or `relu` for nonlinear functions.\n",
